Enhance user experience - align icons in action column when hide complete icon - remove cursor: pointer from .icon-button to prevent showing cursor when hide complete icon - to enable to display drop down list our of the dialog itself and prevent from displaying vertical scroll bar when expand drop down list

--- a/src/app/to-do-list/to-do-list.component.css
+++ b/src/app/to-do-list/to-do-list.component.css
@@ -3,7 +3,6 @@
     border: none;      /* Remove border */
     padding: 0;        /* Remove padding */
     margin: 0;         /* Remove margin */
-    cursor: pointer;   /* Change cursor to pointer to indicate it's clickable */
 }
 
 /* Optional: Add styles for hover and focus states */
